--- a/static/templates/baslik/profil.html
+++ b/static/templates/baslik/profil.html
@@ -3,6 +3,7 @@
 <title>sozluksu >> {{ kullanici }}</title>
 {% endblock %}
 {% block content %}
+{% load staticfiles %}
 <div class="segment">
     <div class="container">
         <div class="introduction">
@@ -10,7 +11,7 @@
                 {{ kullanici }}
             </h1>
             {% if user.is_authenticated %}
-            {% if user != entry.user %}
+            {% if kullanici != request.user %}
             <div class="small ui buttons">
                 <div class="ui button" style="background-color:white;">
                     <a href="/messages/compose/{{ kullanici }}/">
@@ -29,36 +30,136 @@
     {% load favit_tags %}
     {% csrf_token %}
     <div class="ui grid">
-        <div class="thirteen wide column">
+        <div class="twelve wide column">
             <div class="ui list">
                 <div class="item">
+                    {% ifequal kullanici request.user %}
+                    <a href="/accounts/password/change/">şifreni değiştir</a><br><br>
+                    {% endifequal %}
+                    {% user_favorites kullanici "baslik.Entry" as favorite_list %}
+                    {% if favorite_list %}
                     <div class="content">
                         <div class="header ui">
                             <p style="color:#05377E;">
-                                <i class="fa fa-heart"></i> gönül verdiği entryler
+                                <i class="fa fa-heartbeat"></i> gönül verdiği entryler
                             </p>
                         </div>
                     </div>
-                    <ul class="ui list">
-                        {% user_favorites kullanici "baslik.Entry" as favorite_list %}
+                    <ul>
+                        {% endif %}
+
                         {% for fav_obj in favorite_list %}
                         {% with fav_obj.target.id as entid %}
                         {% if fav_obj.target != None %}
-                        <li class="item">
+                        <li>
                             <a style="color: black;" href="{% url "tek_entry" entid %}" class="item">
-                                {{ fav_obj.target.baslik }}
+                                <p>{{ fav_obj.target.baslik }}/{{ fav_obj.target.numara }}</p>
                             </a>
                         </li>
                         {% endif %}
                         {% endwith %}
                         {% endfor %}
                     </ul>
+                    <div class="content">
+                        <div class="header ui">
+                            <p style="color:#05377E;">
+                                <i class="fa fa-heart"></i> gönül verilen entryleri
+                            </p>
+                        </div>
+                    </div>
+                    <div>
+                        <ul>
+                            {% for a in list_gnl %}
+                            {% ifequal a.user kullanici %}
+                            <li>
+                                <a style="color: black;" href="{% url "tek_entry" a.id %}" class="item">
+                                    <p>{{ a.baslik }}/{{ a.numara }}</p>
+                                </a>
+                                {% endifequal %}
+                                {% endfor %}
+                            </ul>
+
+                        </div>
+                        <div class="content">
+                            <div class="header ui">
+                                <p style="color:#05377E;">
+                                    <i class="fa fa-user"></i> entryleri
+                                </p>
+                            </div>
+                        </div>
+                        <div class="entryler" id="ents">
+                            <ul>
+                                {% for ent in entryler %}
+
+                                <li>
+                                    <a style="color: black;" href="{% url "tek_entry" ent.id %}" class="item">
+                                        <p>{{ ent.baslik }}/{{ ent.numara }}</p>
+                                    </a>
+                                </li>
+                                {% endfor %}
+                                <span class="step-linkse" >
+                                    {% if entryler.has_previous %}
+                                    <a style="color:#05377E;" id="preve" href="?entrysayfa={{ entryler.previous_page_number }}"><i class="fa fa-arrow-left"></i></a> &nbsp;&nbsp;
+                                    {% endif %}
+
+                                    {% if entryler.has_next %}
+                                    <a style="color:#05377E;" id="nexte" href="?entrysayfa={{ entryler.next_page_number }}"><i class="fa fa-arrow-right"></i></a>
+                                    {% endif %}
+                                    &nbsp;&nbsp;&nbsp; <a  style="display: none;color:#05377E;" id="loading-image"><i class="fa fa-circle-o-notch fa-spin"></i></a>
+                                </span>
+                            </ul>
+                        </div>
+
+
+                        <script type="text/javascript">
+                            function ajaxxent_get_update()
+                            {
+                                $('#loading-image').show();
+                                $.get(url, function(results){
+                                    var menu = $("div.entryler", results);
+
+                                    $('.entryler').html(menu);
+                                }, "html");
+
+                            }
+
+                            $( document ).ready( function() {
+                                $( '.step-linkse #preve' ).click( function(e) {
+                                    e.preventDefault();
+                                    url = ($( '.step-linkse #preve' )[0].href);
+                                    ajaxxent_get_update();
+                                });
+                                $( '.step-linkse #nexte' ).click( function(e) {
+                                    e.preventDefault();
+                                    url = ($( '.step-linkse #nexte' )[0].href);
+                                    ajaxxent_get_update();
+
+                                });
+
+                            });
+
+                            $( document ).ajaxStop( function() {
+                                $( '.step-linkse #preve' ).click( function(e) {
+                                    e.preventDefault();
+                                    url = ($( '.step-linkse #preve' )[0].href);
+                                    ajaxxent_get_update();
+                                });
+                                $( '.step-linkse #nexte' ).click( function(e) {
+                                    e.preventDefault();
+                                    url = ($( '.step-linkse #nexte' )[0].href);
+                                    ajaxxent_get_update();
+                                });
+
+                            });
+                        </script>
+
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="three wide computer only column">
-            <img src="http://www.e-corlu.com/reklam/img/250x250.gif">
+            <div class="three wide computer only column">
+
+            </div>
         </div>
     </div>
-</div>
-{% endblock %}
+    {% endblock %}
+    
