--- a/sozlukus/favit/templates/favit/button.html
+++ b/sozlukus/favit/templates/favit/button.html
@@ -1,6 +1,6 @@
-<div class="favit">
-  <button class="btn favorite" href="{% url 'add_or_remove' %}" model="{{ target_model }}" id="target_{{ target_object_id }}">
-    <i class="icon-heart{% if not undo %}-empty{% endif %}"></i>
-  </button>
+<div class="ui button favit" style="background-color:white;">
+  <a class="btn favorite" href="{% url 'add_or_remove' %}" model="{{ target_model }}" id="target_{{ target_object_id }}" style="color: red;">
+    <i class="fa fa-heart{% if not undo %}-empty{% endif %}"></i>
+  </a>
   <span class="fav-count">{{ fav_count }}</span>
 </div>
