--- a/sozlukus/static/templates/baslik/sikayet.html
+++ b/sozlukus/static/templates/baslik/sikayet.html
@@ -34,7 +34,7 @@
         </div>
         {% if user.is_authenticated %}
         <div class="three wide computer only column">
-            <img src="http://www.e-corlu.com/reklam/img/250x250.gif">
+            <!-- ads? -->
         </div>
         {% endif %}
     </div>
