--- a/sozlukus/static/templates/baslik/profil.html
+++ b/sozlukus/static/templates/baslik/profil.html
@@ -52,7 +52,7 @@
                         {% with fav_obj.target.id as entid %}
                         {% if fav_obj.target != None %}
                         <li>
-                            <a style="color: black;" href="{% url "tek_entry" entid %}" class="item">
+                            <a style="color: black;" href="{% url "singleEntry" entid %}" class="item">
                                 <p>{{ fav_obj.target.baslik.title }}/{{ fav_obj.target.numara }}</p>
                             </a>
                         </li>
@@ -72,7 +72,7 @@
                             {% for a in list_gnl %}
                             {% ifequal a.user kullanici %}
                             <li>
-                                <a style="color: black;" href="{% url "tek_entry" a.id %}" class="item">
+                                <a style="color: black;" href="{% url "singleEntry" a.id %}" class="item">
                                     <p>{{ a.baslik.title }}/{{ a.numara }}</p>
                                 </a>
                                 {% endifequal %}
@@ -92,7 +92,7 @@
                                 {% for ent in entryler %}
 
                                 <li>
-                                    <a style="color: black;" href="{% url "tek_entry" ent.id %}" class="item">
+                                    <a style="color: black;" href="{% url "singleEntry" ent.id %}" class="item">
                                         <p>{{ ent.baslik.title }}/{{ ent.numara }}</p>
                                     </a>
                                 </li>
