--- a/sozlukus/static/templates/baslik/tek.html
+++ b/sozlukus/static/templates/baslik/tek.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block head %}
-<title>sözlükus >> {{ baslik }} hakkında malumatlar</title>
+<title>sözlükus >> {{ baslik.title }} hakkında malumatlar</title>
 {% endblock %}
 {% block content %}
 {% load ttag %}
@@ -28,7 +28,7 @@
     <div class="ui stackable grid">
         <div class="twelve wide column">
             {% for entry in sayfalar %}
-            <a style="color: black;" href="{% url "tek_entry" entry.id %}" class="item">
+            <a style="color: black;" href="{% url "singleEntry" entry.id %}" class="item">
                 <div class="ui raised segment">
                     <div class="ui ribbon label" style="background-color:#05377E;">
                         <p style="color:white; text-align: center;">{{ entry.numara }}
@@ -103,6 +103,7 @@
                         <div class="row">
                             <div class="small ui buttons" style="float:right;">
                                 {% if user.is_authenticated %}
+                                {% favorite_button entry %}
                                 {% if user != entry.user %}
                                 <a href="/messages/compose/{{ entry.user }}/">
                                     <div class="ui button" style="background-color:white;">
@@ -128,6 +129,7 @@
                                     ;
                                     }
                                 </script>
+                                
                                 <a href="/entry/{{ entry.id }}/duzenle/">
                                     <div class="ui button" style="background-color:white;">
                                         <p style="color: #05377E;">
@@ -222,7 +224,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                {% favorite_button entry %}
+                                
                             </div>
                         </div>
                     </div>
@@ -276,7 +278,7 @@
               {% endif %}
           </div>
           <div class="three wide computer only column">
-              <img src="{% static 'resim/250.gif' %}">
+              <!-- ads? -->
           </div>
       </div>
 </div>
