--- a/sozlukus/static/templates/baslik/tek.html
+++ b/sozlukus/static/templates/baslik/tek.html
@@ -199,18 +199,18 @@
                                                 #{{ entry.id }}
                                             </div>
                                             <div>
-                                                <a href="http://www.facebook.com/sharer/sharer.php?u=http://munhasir.com/entry/{{ entry.id }}" target="_blank">
+                                                <a href="http://www.facebook.com/sharer/sharer.php?u=https://sozlukus.herokuapp.com/entry/{{ entry.id }}" target="_blank">
                                                     <i class="fa fa-facebook"></i> Facebook'da paylaş
                                                 </a>
                                             </div>
                                             <div>
-                                                <a href="http://twitter.com/intent/tweet?text=http://munhasir.com/entry/{{ entry.id }} @malisit aracılığıyla" target="_blank">
+                                                <a href="http://twitter.com/intent/tweet?text=https://sozlukus.herokuapp.com/entry/{{ entry.id }} @malisit aracılığıyla" target="_blank">
                                                     <i class="fa fa-twitter"></i> Twitle
                                                 </a>
                                             </div>
                                             <div>
                                                 <h3>Sadece link:</h3>
-                                                http://munhasir.com/entry/{{ entry.id }}
+                                                https://sozlukus.herokuapp.com/entry/{{ entry.id }}
                                             </div>
                                             <div class="actions">
                                                 <div class="two fluid ui buttons">
