--- a/sozlukus/static/templates/registration/password_change_done.html
+++ b/sozlukus/static/templates/registration/password_change_done.html
@@ -1,14 +1,27 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block title %}{% trans 'Password change successful' %}{% endblock %}
+{% block head %}
+<title>sözlükus >> şifre değiştirme</title>
+{% endblock %}
 
 {% block content %}
 
-<h1>{% trans 'Password change successful' %}</h1>
-
-<p>{% trans 'Your password was changed.' %}</p>
-
+<div class="segment" id="mainsegment">
+    <div class="container">
+        <div class="introduction">
+            <h1 class="ui dividing header">
+                şifre değiştirme işlemi başarılı oldu
+            </h1>
+            <p>
+               &nbsp;
+            </p>
+        </div>
+    </div>
+</div>
+<div class="main container page">
+şifrenizi değiştirdik. hayırlı olsun.
+</div>
 {% endblock %}
 
 {% block content-related %}
