--- a/sozlukus/static/templates/registration/password_change_form.html
+++ b/sozlukus/static/templates/registration/password_change_form.html
@@ -2,14 +2,25 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block title %} {% trans 'Password change' %} {% endblock %}
+{% block head %}
+<title>sözlükus >> şifre değiştirme</title>
+{% endblock %}
 
 {% block content %}
 
-<h1>{% trans 'Password change' %}</h1>
-
-<p>{% trans "Please enter your old password, for security's sake, and then enter your new password twice so we can verify you typed it in correctly." %}</p>
-
+<div class="segment" id="mainsegment">
+    <div class="container">
+        <div class="introduction">
+            <h1 class="ui dividing header">
+                şifre değiştirme
+            </h1>
+            <p>
+               &nbsp;
+            </p>
+        </div>
+    </div>
+</div>
+<div class="main container page">
 <form action="" method="post">
 {% csrf_token %}
 {{ form.old_password.errors }}
@@ -36,7 +47,7 @@
 <button type="submit" class="ui blue submit button">  Kaydet </button>
 </form>
 
-
+</div>
 
 {% endblock %}
 
