--- a/sozlukus/static/templates/registration/password_reset_email.html
+++ b/sozlukus/static/templates/registration/password_reset_email.html
@@ -3,7 +3,7 @@ bu maili {{ site_name }}'daki hesabınızın şifresini sıfırlamak istediğini
 
 {% trans "aşağıdaki linke gidip yeni şifrenizi edinebilirsiniz." %}
 {% block reset_link %}
-{{ protocol }}://{{ domain }}{% url 'django.contrib.auth.views.password_reset_confirm' uidb64=uid token=token %}
+{{ protocol }}://{{ domain }}{% url 'auth_password_reset_confirm' uid token %}
 {% endblock %}
 {% trans "belki unutmuşsunuzdur diye bu da kullanıcı adınız:" %} {{ user.username }}
 
