--- a/sozlukus/static/templates/baslik/tekentry.html
+++ b/sozlukus/static/templates/baslik/tekentry.html
@@ -181,19 +181,19 @@
     									<div class="center">
 											<div>#{{ entry.id }}</div>
  											<div>
-												<a href="http://www.facebook.com/sharer/sharer.php?u=http://munhasir.com/entry/{{ entry.id }}" target="_blank">
-													<i class="fa fa-facebook"></i> Facebook'da paylaş
-												</a>
-											</div>
- 											<div>
-												<a href="http://twitter.com/intent/tweet?text=http://munhasir.com/entry/{{ entry.id }} @malisit aracılığıyla" target="_blank">
-													<i class="fa fa-twitter"></i> Twitle
-												</a>
-											</div>
- 											<div>
- 												<h3>Sadece link:</h3>
- 												http://munhasir.com/entry/{{ entry.id }}
- 											</div>
+                                                <a href="http://www.facebook.com/sharer/sharer.php?u=https://sozlukus.herokuapp.com/entry/{{ entry.id }}" target="_blank">
+                                                    <i class="fa fa-facebook"></i> Facebook'da paylaş
+                                                </a>
+                                            </div>
+                                            <div>
+                                                <a href="http://twitter.com/intent/tweet?text=https://sozlukus.herokuapp.com/entry/{{ entry.id }} @malisit aracılığıyla" target="_blank">
+                                                    <i class="fa fa-twitter"></i> Twitle
+                                                </a>
+                                            </div>
+                                            <div>
+                                                <h3>Sadece link:</h3>
+                                                https://sozlukus.herokuapp.com/entry/{{ entry.id }}
+                                            </div>
 											<div class="actions">
 												<div class="two fluid ui buttons">
 													<div class="ui negative button">
