--- a/sozlukus/static/templates/registration/password_reset_confirm.html
+++ b/sozlukus/static/templates/registration/password_reset_confirm.html
@@ -30,7 +30,7 @@
  <div class="field">
     <label>Şifre</label>
     <div class="ui left labeled icon input">
-      <input type="password" placeholder="Şifre" class="form-control" name="new_password1" value="" >
+      <input id="id_new_password1" type="password" placeholder="Şifre" class="form-control" name="new_password1" value="" >
       <i class="lock icon"></i>
       <div class="ui corner label">
         <i class="icon asterisk"></i>
@@ -45,7 +45,7 @@
 <div class="field">
     <label>Şifre(Tekrar)</label>
     <div class="ui left labeled icon input">
-      <input type="password" placeholder="Şifre(Tekrar)" class="form-control" name="new_password2" value="" >
+      <input id="id_new_password2" type="password" placeholder="Şifre(Tekrar)" class="form-control" name="new_password2" value="" >
       <i class="lock icon"></i>
       <div class="ui corner label">
         <i class="icon asterisk"></i>
